php/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php
  name: php
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: php
    deploymentconfig: php
  sessionAffinity: None
  type: ClusterIP
