php/Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: www
spec:
  to:
    kind: Service
    name: php
